k8s/platform/bootstrap-proxies/vault.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: bootstrap-proxies
spec:
  ports:
    - port: 8200
      targetPort: 8200
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: vault
  namespace: bootstrap-proxies
  labels:
    kubernetes.io/service-name: vault
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.120
ports:
  - port: 8200
    protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault
  namespace: bootstrap-proxies
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Vault
    gethomepage.dev/description: Homelab secrets management
    gethomepage.dev/group: Platform
    gethomepage.dev/icon: vault.png
    gethomepage.dev/href: http://vault.sfl
    gethomepage.dev/siteMonitor: http://vault.sfl
    gethomepage.dev/external: "true"
    gethomepage.dev/weight: "20"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`vault.sfl`)
      kind: Rule
      services:
        - name: vault
          port: 8200
